Adding 501 response status to documentation
